# hm-config

./: .gitignore  Dockerfile  README.md  RPi.GPIO-0.7.0-cp38-cp38-linux_aarch64.whl  dbus-wait.sh  do_docker_test.sh  docker-compose.yml  h3-3.7.1-cp38-cp38-linux_aarch64.whl  idle.sh  pyproject.toml  requirements.txt  setenv.sh  start-gateway-config.sh  systemd-stop-unit.sh  test-requirements.txt
.github/: contributing.md
.github/linters/: .flake8
.github/workflows/: compile-docker.yml  linter.yml  python-flake8.yml  python-linting.yml  python-tests.yml  security-audit.yml
config-python/: add_gateway_pb2.py  advertisement.py  assert_location_pb2.py  bletools.py  config_program.py  diagnostics_pb2.py  genProtos.sh  service.py  uuids.py  wifi_connect_pb2.py  wifi_remove_pb2.py  wifi_services_pb2.py
config_python/: add_gateway_pb2.py  bletools.py  config_program.py  diagnostics_pb2.py  nmcli_custom.py  service.py  uuids.py  wifi_connect_pb2.py  wifi_services_pb2.py
config_python/protos/: wifi_remove.proto
config_python/tests/: test_advertisement.py  test_bletools.py  test_config_program.py  test_general.py  test_nmcli_custom.py  test_service.py
example/: device_keys.txt  eth0_mac_address.txt  nebra-diag.json  onboarding_key.txt
gatewayconfig/: __main__.py  constants.py  file_loader.py  gatewayconfig_app.py  gatewayconfig_shared_state.py  helpers.py  logger.py  nmcli_custom.py
gatewayconfig/gpio/: button_common.py  gpio_button.py  gpio_led.py  mraa_button.py  mraa_gpio.py  mraa_led.py  neopixel_led.py
gatewayconfig/processors/: bluetooth_advertisement_processor.py  bluetooth_services_processor.py  diagnostics_processor.py  led_processor.py  wifi_processor.py
gatewayconfig/protos/: add_gateway_pb2.py  assert_location_pb2.py  diagnostics_pb2.py  (+3 more)
helium-miner-config/: config_program.py
lib/: bletools.py  service.py  variant_definitions.py
piwheels/: RPi.GPIO-0.7.0-cp37-cp37m-linux_aarch64.whl  colorzero-1.1-py2.py3-none-any.whl  gpiozero-1.5.1-py2.py3-none-any.whl  h3-3.7.2-cp37-cp37m-linux_aarch64.whl  h3-3.7.2-cp37-cp37m-linux_armv6l.whl
protos/: generate-protos.sh
src/: advertisement.py  main.py  nmcli_custom.py
(+64 files in other folders)
