[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hm_config"
version = "1.0"
description = "Nebra Helium Hotspot configuration utility"
authors = ["Nebra Ltd <support@nebra.com>"]
readme = "README.md"
packages = [
    { include = "gatewayconfig" },
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "~3.9"
colorzero = "~2.0"
dbus-python = "~1.3.2"
gpiozero = "~1.6.2"
grpcio = "~1.53.0"
h3 = "~3.7.6"
hm-pyhelper = "~0.14.13"
nmcli = "~1.1.2"
protobuf = "~4.21.12"
pycairo = "~1.23.0"
PyGObject = "~3.42.2"
requests = "~2.31.0"
retry = "~0.9.2"
RPi-gpio = "~0.7.1"
rpi-ws281x = "~4.3.4"
sentry-sdk = "~1.17.0"

[tool.poetry.group.dev.dependencies]
bandit = { version = "~1.7.4", extras = ["toml"] }
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
responses = "^0.22.0"
ruff = "~0.0.265"

[tool.ruff]
line-length = 120
include = ["gatewayconfig", "lib"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["tests"]
