[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hm_config"
version = "1.0"
description = "Nebra Helium Hotspot configuration utility"
authors = ["Nebra Ltd <support@nebra.com>"]
readme = "README.md"
packages = [
    { include = "gatewayconfig" },
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "~3.9"
colorzero = "~2.0"
dbus-python = "~1.3.2"
gpiozero = "~1.6.2"
grpcio = "~1.56.0"
h3 = "~3.7.6"
hm-pyhelper = "~0.14.22"
nmcli = "~1.2.0"
protobuf = "~4.23.4"
pycairo = "~1.24.0"
PyGObject = "~3.44.1"
requests = "~2.31.0"
retry = "~0.9.2"
RPi-gpio = "~0.7.1"
rpi-ws281x = "~5.0.0"
sentry-sdk = "~1.27.1"
urllib3 = "~2.0.3"
gpio4 = "^0.1.6"

[tool.poetry.group.dev.dependencies]
bandit = { version = "~1.7.5", extras = ["toml"] }
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
responses = "^0.23.1"
ruff = "~0.0.277"

[tool.ruff]
line-length = 120
include = ["gatewayconfig", "lib"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["tests"]
